feat: suwagger delete handler documentation
